<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_4"
    android:backgroundTint="@color/bg"
    tools:context=".ayuda2">

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detras" />

    <Button
        android:id="@+id/btn_menu"
        android:layout_width="198dp"
        android:layout_height="60dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_black_italic"
        android:onClick="Incio"
        android:text="@string/start"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:cornerRadius="200px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="377dp"
        android:layout_height="516dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/button_gradient"
        android:backgroundTint="@color/purple"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:fontFamily="@font/montserrat_black_italic"
            android:text="@string/Inst_titulo_2"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="27sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="306dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="16dp"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="43dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:scaleType="fitCenter"
                    app:srcCompat="@drawable/num1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="22dp"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/num2" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/imageView10"
                    android:layout_width="match_parent"
                    android:layout_height="71dp"
                    app:srcCompat="@drawable/num3" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="15dp"
                    android:orientation="horizontal"></LinearLayout>

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    app:srcCompat="@drawable/num4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="297dp"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="79dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/punto1"
                    android:textAlignment="viewStart"
                    android:textColor="@color/ic_icono_launcher_background"
                    android:textSize="13sp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/punto2"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/punto3"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/punto4"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="131dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="21dp"
                android:layout_height="94dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="348dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/Inst_3"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>