<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo3"
    android:backgroundTint="@color/bg"
    tools:context=".ayudaJuego">

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detras" />

    <Button
        android:id="@+id/btn_menu2"
        android:layout_width="337dp"
        android:layout_height="62dp"
        android:layout_marginBottom="68dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/montserrat_black_italic"
        android:onClick="regresar"
        android:text="@string/regresar"
        android:textColor="@color/purple"
        android:textSize="24sp"
        app:cornerRadius="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="470dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/button_gradient"
        android:backgroundTint="@color/red"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView15">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="321dp"
            android:layout_height="74dp"
            android:fontFamily="@font/montserrat_black_italic"
            android:text="@string/aprende"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="307dp"
            android:layout_height="138dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tema"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="219dp"
            android:layout_height="81dp"
            app:srcCompat="@drawable/ejemplo1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="221dp"
            android:layout_height="98dp"
            app:srcCompat="@drawable/ejemplo2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>