<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_4"
    android:backgroundTint="@color/bg"
    tools:context=".ayuda_juego2">

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detras" />

    <Button
        android:id="@+id/button5"
        android:layout_width="335dp"
        android:layout_height="61dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_black_italic"
        android:onClick="regresar"
        android:text="@string/regresar"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:cornerRadius="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:layout_width="364dp"
        android:layout_height="423dp"
        android:layout_marginTop="88dp"
        android:background="@drawable/button_gradient"
        android:backgroundTint="@color/white"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="49dp"
            android:fontFamily="@font/montserrat_black_italic"
            android:text="@string/juego2"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="21sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="320dp"
            android:layout_height="232dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/tema2"
            android:textColor="@color/blue_dark"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="265dp"
            android:layout_height="59dp"
            app:srcCompat="@drawable/formula1tema2" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="217dp"
            android:layout_height="41dp"
            app:srcCompat="@drawable/formula2tema2" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>