<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_4"
    android:backgroundTint="@color/bg"
    tools:context=".ayuda">

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detras" />

    <Button
        android:id="@+id/btn_ayuda_sig"
        android:layout_width="248dp"
        android:layout_height="62dp"
        android:layout_marginBottom="84dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_black_italic"
        android:onClick="regresar"
        android:text="@string/siguiente"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:cornerRadius="250px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="365dp"
        android:layout_height="447dp"
        android:layout_marginTop="112dp"
        android:background="@drawable/button_gradient"
        android:backgroundTint="@color/purple"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_icono"
            android:layout_width="match_parent"
            android:layout_height="259dp"
            android:background="@drawable/button_gradient"
            android:backgroundTint="@android:color/transparent"
            app:srcCompat="@drawable/icono_sombra" />

        <TextView
            android:id="@+id/txt_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_black_italic"
            android:text="@string/Inst_titulo"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="111dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="24dp"
                android:layout_height="112dp"
                android:orientation="vertical"></LinearLayout>

            <TextView
                android:id="@+id/txt_exp"
                android:layout_width="321dp"
                android:layout_height="112dp"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/Inst_1"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>