<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_4"
    android:backgroundTint="@color/bg"
    tools:context=".juego2">

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="matrix"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/detras" />

    <Button
        android:id="@+id/btn_drop"
        android:layout_width="338dp"
        android:layout_height="62dp"
        android:layout_marginBottom="56dp"
        android:backgroundTint="@color/yellow"
        android:fontFamily="@font/montserrat_extrabold_italic"
        android:onClick="dd"
        android:text="@string/siguiente"
        android:textColor="@color/red"
        android:textSize="24sp"
        app:cornerRadius="20px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/purple_dark"
        android:onClick="ayudajuego"
        android:text="@string/help"
        android:textAlignment="center"
        android:textColor="@color/ic_icono_launcher_background"
        app:cornerRadius="20px"
        app:icon="@drawable/ayuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="145dp"
        android:layout_height="51dp"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/purple_dark"
        android:fontFamily="@font/montserrat_medium"
        android:onClick="menu"
        android:text="Inicio"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="20px"
        app:icon="@drawable/house"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="348dp"
        android:layout_height="407dp"
        android:layout_marginTop="140dp"
        android:background="@drawable/button_gradient"
        android:backgroundTint="@color/green"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="242dp"
            android:layout_height="93dp"
            app:srcCompat="@drawable/ejercicio1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="18dp"
            android:orientation="horizontal"></LinearLayout>

        <TextView
            android:id="@+id/textView9"
            android:layout_width="296dp"
            android:layout_height="81dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/quintopaso"
            android:textColor="@color/blue_dark"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="16dp"
            android:orientation="horizontal"></LinearLayout>

        <Spinner
            android:id="@+id/sp"
            android:layout_width="309dp"
            android:layout_height="60dp"
            android:background="@drawable/button_gradient"
            android:backgroundTint="@color/blue_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="17dp"
            android:orientation="horizontal"></LinearLayout>

        <Button
            android:id="@+id/button9"
            android:layout_width="187dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/red"
            android:fontFamily="@font/montserrat_extrabold_italic"
            android:onClick="res"
            android:text="@string/verificar"
            android:textColor="@color/yellow"
            android:textSize="20sp"
            app:cornerRadius="200px" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>